--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1> Neeraj Saini</h1>
     <h3>Software Engineer</h3>
-    <img src= "../Resume/EE44B7FD-8F85-4ADF-A847-6C56341EDFD4 2.jpg" width="250" height="200" alt="My picture" />
+    <img src= "EE44B7FD-8F85-4ADF-A847-6C56341EDFD4 2.jpg" width="250" height="200" alt="My picture" />
     <p>
         <h2>About Me</h2>
         I have a strong academic background and practical experience in Computer Science and Engineering. As a recent graduate with a transformative 6-month internship, I possess a passion for innovation, problem-solving, and making a positive impact. Eager to leverage my skills and drive for success in my chosen field.
